Fixed minor problems with page layout. Fixed spacing for all "big" containers. Fixed spacing for "update" button in price search criteria.

--- a/src/styles/search.css
+++ b/src/styles/search.css
@@ -10,20 +10,21 @@ body {
     border: none;
     color: #e5e5e5;
     background-color: #002a5c;
+    outline: none;
 }
 
 #search-container {
     position: relative;
     top: 100px;
     width: 50%;
-    left: 12%;
+    left: 14%;
 }
 
 #criteria-container {
     position: relative;
     top: 100px;
     width: 20%;
-    left: 10%;
+    left: 12%;
     text-align: center;
     font-size: 20px;
 }
@@ -32,7 +33,7 @@ body {
     position: absolute;
     padding-left: 10px;
     top: 160px;
-    left: 32%;
+    left: 34%;
     width: 50%;
     height: 80%;
     overflow: auto;
@@ -97,15 +98,9 @@ body {
     margin-bottom: 5px;
 }
 
-.criterion-container form button {
-    border: none;
-    color: #e5e5e5;
-    background-color: #002a5c;
-}
-
 #price-form input {
     outline: none;
-    width: 30%;
+    width: 29%;
 }
 
 #course-form input {
